--- a/index.html
+++ b/index.html
@@ -13,23 +13,30 @@
     
 
 	<!-- Mobile navigation menu -->
-	<nav class="mobile-menu">
+
+
+	<div class = "mobile-menu-container">
+
+		<nav class="mobile-menu">
+			<div class = "mobile-menu-header-left"> 
+				<img src="./images/Adjacent-Name-Logo.png" alt="Essence Sourcing Logo Name" class="mobile-header-left-name">
+			</div>
+			<ul class="mobile-menu-header-right">
+				<li><a href="#Home">Home</a></li>
+				<li><a href="#About Us">About Us</a></li>
+				<li><a href="#Services">Services</a></li>
+				<li><a href="#Products">Products</a></li>
+				<a href="#Contact"><li>Contact Us</li></a> <!--link to email--->
+				<a href="https://wa.me/15718882531"><li><img class = "mobile-whatsapp-icon" src="./images/whatsappicon2.png" alt="WhatsApp Icon"> </li></a> <!--make it whatsapp icon-->
+				<!-- Add more menu items as needed -->
+			</ul>
+		</nav>
 		<div class="mobile-menu-icon" onclick="toggleMobileMenu()">
 			<span></span>
 			<span></span>
 			<span></span>
 		</div>
-		<h3 class="mobile-menu-header-left"> Essence Sourcing </h3>
-		<ul class="mobile-menu-header-right">
-			<li><a href="#Home">Home</a></li>
-			<li><a href="#About Us">About Us</a></li>
-			<li><a href="#Services">Services</a></li>
-			<li><a href="#Products">Products</a></li>
-			<a href="#Contact"><li>Contact Us</li></a> <!--link to email--->
-			<a href="https://wa.me/15718882531"><li><img src="./images/whatsappicon2.png" alt="WhatsApp Icon"> </li></a> <!--make it whatsapp icon-->
-			<!-- Add more menu items as needed -->
-		</ul>
-	</nav>
+	</div>
 
 
     <div class = "pagesection1">
@@ -50,16 +57,14 @@
 					</ul>
 			</div>
 		</div>
-        <section id = "Home">
             <div class = "pagesection1content">
                 <div class = "pagesection1text-button">
-                    <h1>Some random Some random Some random Some random  </h1>
+                    <h1> Flavor the World Differently! </h1>
                 </div>   
                 <div class = "pagesection1img">
-                    <img src="./images/imgplaceholder.jpeg" alt="Placeholder for image">
+                    <img src="./images/Home Page Image 1.png" alt="Placeholder for image">
                 </div>    
             </div>
-        </section>
     </div>
 
     <section id = "About Us">
