--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Essence Sourcing</title>
     <link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Open+Sans&display=swap" rel="stylesheet">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+
 </head>
 
 <body>
@@ -143,7 +148,7 @@
 
 		<div class="pair">
 				<div class = "pairText">
-					<h3 class = "productHeaders">Afghan Treasure: Select Saffron Threads</h3>
+					<h3 class = "productHeaders">Afghan Treasure: <br> Select Saffron Threads</h3>
 					<p>Discover the luxury of ‘Premium Saffron Threads,’ harvested from Afghanistan's sun-kissed fields. These vivid crimson strands are a culinary gem, perfect for enhancing dishes like paella, risotto, and biryani, as well as teas and desserts. Each thread, carefully handpicked, delivers unparalleled richness and a taste of Afghan heritage.</p>
 				</div>	
 				<img src="images/SaffronThreads.jpg" alt="Saffron Threads">
@@ -151,7 +156,7 @@
 	  
 		<div class="pair">
 				<div class = "pairText">
-					<h3 class = "productHeaders">Sesame Duo: Premium Seeds & Pure Oil</h3>
+					<h3 class = "productHeaders">Sesame Duo: <br> Premium Seeds & Pure Oil</h3>
 					<p>Explore the Sesame Duo each available individually. Our sesame seeds, sourced for their rich, nutty flavor, are ideal for enhancing a variety of culinary creations. The pure, refined sesame oil, perfect for dressings and marinades, complements these seeds. Both products, sold separately, represent a commitment to tradition and quality, bringing an exotic touch to your product line.</p>
 				</div>	
 				<img src="images/SesameSeeds.jpg" alt="Sesame Seeds">
@@ -159,7 +164,7 @@
 
 		<div class="pair">
 			<div class = "pairText">
-				<h3 class = "productHeaders">Black Seed Harmony: Premium Seeds & Pure Oil</h3>
+				<h3 class = "productHeaders">Black Seed Harmony: <br> Premium Seeds & Pure Oil</h3>
 				<p>Discover our Afghan Black Seed Collection, featuring Premium Seeds and Pure Oil, available for individual purchase. Our black seeds are renowned for their health benefits, making them perfect for nutritional supplements and culinary uses. Additionally, we offer pure, cold-pressed black seed oil, a key component in health and wellness products. While each complements the other, they are sold separately, catering to diverse needs in dietary supplements and unique culinary applications.</p>
 			</div>	
 			<img src="images/BlackSeed.jpg" alt="Black Seeds">
@@ -167,7 +172,7 @@
 
 		<div class="pair">
 			<div class = "pairText">
-				<h3 class = "productHeaders">Green Gold: Premium Cardamom</h3>
+				<h3 class = "productHeaders">Green Gold: <br> Premium Cardamom</h3>
 				<p>Experience ‘Premium Cardamom,’ a testament to Afghanistan's fertile valleys. Each pod offers a unique blend of sweet and spicy notes, enhancing South Asian dishes and global recipes. This cardamom is also prized in specialty beverages and natural health remedies, adding a touch of luxury and heritage to every use​​.</p>
 			</div>	
 			<img src="images/Cardamon.jpg" alt="Cardamon Seeds">
@@ -175,7 +180,7 @@
 
 		<div class="pair">
 			<div class = "pairText">
-				<h3 class = "productHeaders">Classic Cumin: Authentic Flavor</h3>
+				<h3 class = "productHeaders">Classic Cumin: <br> Authentic Flavor</h3>
 				<p>‘Classic Cumin’ captures the rich, earthy depths of Afghanistan's culinary traditions. Handpicked for flavor and aroma, this cumin is indispensable in a range of global cuisines. Its robust flavors enhance everything from stews to grilled meats, while its health benefits make it a staple in wellness practices​​.</p>
 			</div>	
 			<img src="images/Cumin-Spice.jpg" alt="Cumin Seeds & Powder">
@@ -184,7 +189,7 @@
 
 		<div class="pair">
 			<div class = "pairText">
-				<h3 class = "productHeaders">Bulk Premium Peanut Oil: Golden Standard</h3>
+				<h3 class = "productHeaders">Bulk Premium Peanut Oil: <br> Golden Standard</h3>
 				<p>‘Premium Peanut Oil’ is designed for large-scale culinary operations. Extracted from select grade peanuts, it's celebrated for its light, clear texture and nutty flavor. Ideal for high-heat cooking, it's also a perfect base for dressings and marinades, aligning with health-conscious trends in the food service industry​​.</p>
 			</div>	
 			<img src="images/PeanutOil.jpeg" alt="Peanut Oil Seeds & Powder">
@@ -192,7 +197,7 @@
 
 		<div class="pair">
 			<div class = "pairText">
-				<h3 class = "productHeaders">Bulk Premium Walnut Oil: Richly Harvested</h3>
+				<h3 class = "productHeaders">Bulk Premium Walnut Oil: <br> Richly Harvested</h3>
 				<p>‘Premium Walnut Oil’ is crafted for businesses seeking versatile, high-quality oils. Extracted from the finest walnuts, it adds a gourmet touch to a variety of dishes with its deep nutty essence. Valued for its nutritional profile, this oil is ideal for enhancing the taste of baked goods and salads, and is a nutritious choice for food services​​.</p>
 			</div>	
 			<img src="images/WalnutOil.jpeg" alt="Cumin Seeds & Powder">
